[workspace]
members = [
    "proxy-lambda",
    "runtime-emulator",
    "test-lambda",
]
resolver = "2"

[workspace.dependencies]
lambda_runtime = { version = "0.12", default-features = false }
tokio = { version = "1.14" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = {version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
