[package]
name = "proxy-lambda"
version = "0.2.0"
authors = ["rimutaka <max@onebro.me>"]
edition = "2021"
description = "A proxy AWS Lambda function for forwarding invocations to a locally run lambda for debugging. To be deployed to AWS in place of the function you wan to debug. Requires SQS access."
license = "Apache-2.0"
repository = "https://github.com/rimutaka/lambda-debug-proxy"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
readme = "../../README.md"

[dependencies]
cargo-lambda-emulator = { path = "../cargo-lambda-emulator" }
tokio = { workspace = true, features = [
  "macros",
  "io-util",
  "sync",
  "rt-multi-thread",
] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lambda_runtime.workspace = true
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.27"
aws-types = "1.3"
flate2 = "1.0"
bs58 = "0.5"
