[package]
name = "runtime-emulator"
version = "0.1.0"
authors = ["rimutaka <max@onebro.me>"]
edition = "2021"
description = "AWS Lambda Runtime Emulator for local debugging"
license = "Apache-2.0"
repository = "https://github.com/rimutaka/lambda-debug-proxy"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
readme = "../README.md"

[lib]
# needed to export types
name = "runtime_emulator_types"
path = "src/types.rs"

[[bin]]
name = "runtime_emulator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.16", features = [
  "macros",
  "io-util",
  "sync",
  "rt-multi-thread",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1.0"
bs58 = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
lambda_runtime = { version = "0.11", default-features = false }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.27"
aws-types = "1.3"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hex = "0.4.3"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
regex = "1.10.5"
lazy_static = "1.5.0"
async_once = "0.2.6"
